[gd_scene load_steps=16 format=3 uid="uid://dwf12xde2pr2q"]

[ext_resource type="Texture2D" uid="uid://dxydgtqhu3501" path="res://Assets/kloofendal_48d_partly_cloudy_puresky_4k.exr" id="1_bknyv"]
[ext_resource type="Script" path="res://world/player.gd" id="3_wfax6"]
[ext_resource type="Script" path="res://Maze.gd" id="4_5qo0i"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_lhwv2"]
panorama = ExtResource("1_bknyv")

[sub_resource type="Sky" id="Sky_jml52"]
sky_material = SubResource("PanoramaSkyMaterial_lhwv2")

[sub_resource type="Environment" id="Environment_2upg8"]
background_mode = 2
sky = SubResource("Sky_jml52")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7hlsk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c8p3c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nky4q"]
height = 1.2

[sub_resource type="BoxMesh" id="BoxMesh_cohki"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bhtyn"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="Animation" id="Animation_htppx"]
resource_name = "Idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/Camera3D/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.441, -0.387, -0.562), Vector3(0.441, -0.462, -0.562)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.0122173, 0, 0.132645), Vector3(-0.191986, -0.0279253, 0.240855)]
}

[sub_resource type="Animation" id="Animation_uxwxh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/Camera3D/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.441, -0.387, -0.562)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0122173, 0, 0.132645)]
}

[sub_resource type="Animation" id="Animation_kx7rc"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/Camera3D/WeaponPivot/WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.264, -0.062, -0.446)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.010472, 0.116937, -1.48877)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/Camera3D/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2.43823, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ih2ug"]
_data = {
"Idle": SubResource("Animation_htppx"),
"RESET": SubResource("Animation_uxwxh"),
"attack": SubResource("Animation_kx7rc")
}

[node name="world" type="Node3D"]

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_2upg8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(0.96363, 0.215375, -0.158209, 0, 0.592013, 0.805928, 0.267238, -0.776617, 0.570482, 0, 0, 0)
shadow_opacity = 0.5

[node name="player" type="CharacterBody3D" parent="."]
script = ExtResource("3_wfax6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_7hlsk")

[node name="standing_collsion_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_c8p3c")

[node name="crouching_collsion_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.603537, 0)
shape = SubResource("CapsuleShape3D_nky4q")
disabled = true

[node name="head" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="player/head"]

[node name="WeaponPivot" type="Node3D" parent="player/head/Camera3D"]

[node name="WeaponMesh" type="MeshInstance3D" parent="player/head/Camera3D/WeaponPivot"]
transform = Transform3D(0.0991216, -0.132256, 0, 0.0132247, 0.991142, 0.0012217, -0.000161578, -0.0121097, 0.0999925, 0.441, -0.387, -0.562)
mesh = SubResource("BoxMesh_cohki")

[node name="Hitbox" type="Area3D" parent="player/head/Camera3D/WeaponPivot/WeaponMesh"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/head/Camera3D/WeaponPivot/WeaponMesh/Hitbox"]
transform = Transform3D(1, -7.62666e-08, 0, -5.50244e-11, 1, 1.16415e-10, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_bhtyn")

[node name="RayCast3D" type="RayCast3D" parent="player"]
target_position = Vector3(0, 2, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
autoplay = "Idle"
playback_default_blend_time = 0.1
libraries = {
"": SubResource("AnimationLibrary_ih2ug")
}

[node name="Maze" type="Node3D" parent="."]
script = ExtResource("4_5qo0i")

[connection signal="animation_finished" from="player/AnimationPlayer" to="player" method="_on_animation_player_animation_finished"]
